--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@turf/turf": "^7.1.0",
     "@types/jest": "^27.5.2",
     "@types/leaflet": "^1.9.8",
     "@types/node": "^16.18.83",
     "@types/react": "^18.2.60",
+    "@types/react-autosuggest": "^10.1.11",
     "@types/react-dom": "^18.2.19",
+    "install": "^0.13.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -46,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.17.4"
   }
 }
